--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="C:\Users\Administrator\Desktop\Backup.jpg" class="img-thumbnail"  alt="...">
+                    <img src="https://github.com/aakashpalap/onlineshop/blob/main/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
