--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-<!--                   https://github.com/aakashpalap/onlineshop/blob/main/images/Backup.JPG -->
-                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
+                    <img src="https://github.com/aakashpalap/onlineshop/blob/main/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -31,7 +30,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
+                    <img src="https://github.com/aakashpalap/onlineshop/blob/main/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -45,7 +44,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
+                    <img src="https://github.com/aakashpalap/onlineshop/blob/main/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -59,7 +58,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
+                    <img src="https://github.com/aakashpalap/onlineshop/blob/main/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -73,7 +72,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
+                    <img src="https://github.com/aakashpalap/onlineshop/blob/main/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -87,7 +86,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
+                    <img src="https://github.com/aakashpalap/onlineshop/blob/main/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -101,7 +100,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
+                    <img src="https://github.com/aakashpalap/onlineshop/blob/main/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -115,7 +114,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
+                    <img src="https://github.com/aakashpalap/onlineshop/blob/main/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -129,7 +128,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
+                    <img src="https://github.com/aakashpalap/onlineshop/blob/main/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -143,7 +142,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
+                    <img src="https://github.com/aakashpalap/onlineshop/blob/main/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -157,7 +156,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
+                    <img src="https://github.com/aakashpalap/onlineshop/blob/main/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -171,7 +170,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
+                    <img src="https://github.com/aakashpalap/onlineshop/blob/main/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
@@ -185,7 +184,7 @@
         <div class="col">
             <div class="card border-dark mb-3" >
                 <div class="card">
-                    <img src="/workspaces/onlineshop/images/Backup.JPG" class="img-thumbnail"  alt="...">
+                    <img src="https://github.com/aakashpalap/onlineshop/blob/main/images/Backup.JPG" class="img-thumbnail"  alt="...">
                         <div class="card-body">
                             <center>
                                 <h5 class="card-title">Card title</h5>
